Bug 159735 - Crash when using APSO extension and closing LibreOffice
Summary: Crash when using APSO extension and closing LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.8.0 target:7.6.6 target:24.2.2
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility Crash
  Show dependency treegraph
 
Reported: 2024-02-15 13:48 UTC by Jean-Michel COSTE
Modified: 2024-02-29 10:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["<name omitted>"]


Attachments
Error message when reopen (21.59 KB, image/png)
2024-02-16 17:43 UTC, Jean-Michel COSTE
Details
Report for crash (27.58 KB, image/png)
2024-02-19 15:51 UTC, Jean-Michel COSTE
Details
crash minidump (694.84 KB, application/vnd.tcpdump.pcap)
2024-02-28 06:46 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Michel COSTE 2024-02-15 13:48:50 UTC
Description:
Lorsque j'utilise l'extension APSO (Alternative Script Organizer for Python) il se produit une chose étrange :
A la réouverture de LibO, il y a un message d'erreur me disant que le programme n'a pas été fermé correctement.

Steps to Reproduce:
1. Install APSO.OXT
2. Use APSO to edit a Python Script
3. Close LibO
4. Reopent LibO

Actual Results:
Error message

Expected Results:
No error message


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2 (X86_64) / LibreOffice Community
Build ID: cdeefe45c17511d326101eed8008ac4092f278a9
CPU threads: 1; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.utf8); UI: fr-FR
Calc: threaded
Comment 1 Rafael Lima 2024-02-15 19:16:09 UTC
I cannot reproduce this in LO 24.2.

What error message are you getting? Can you please share a screenshot?
Comment 2 Jean-Michel COSTE 2024-02-16 17:43:05 UTC
Created attachment 192609 [details]
Error message when reopen
Comment 3 QA Administrators 2024-02-17 03:13:17 UTC Comment hidden (obsolete)
Comment 4 Jean-Michel COSTE 2024-02-19 15:51:21 UTC
Created attachment 192640 [details]
Report for crash
Comment 5 stragu 2024-02-28 04:30:43 UTC
Jean-Michel's report is https://crashreport.libreoffice.org/stats/crash_details/40f2d04a-4398-4dd4-aee9-2818d3595d31
(Jean-Michel, please share the link instead of a screenshot next time!)

I managed to crash it too with:

Version: 24.2.1.1 (X86_64) / LibreOffice Community
Build ID: 359ef544e625d2ffbfced462ab37bd593ca85fa7
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I didn't even need to edit a script:
1. Install APSO 1.3.2
2. (In APSO options, set Editor to "gedit")
3. Tools > Macros > Organize python scripts
4. Close the dialog and LO
5. Open LO again

Result: crash report window pops up, <name omitted> signature.
https://crashreport.libreoffice.org/stats/crash_details/884fe115-d8e5-4335-99a2-663aafbd5dba

I also managed to get a different signature, but I am unsure about the steps:
"std::_Hashtable<unsigned int, std::pair<unsigned int const, comphelper::OInterfaceContainerHelper4<com::sun::star::accessibility::XAccessibleEventListener> >, std::allocator<std::pair<unsigned int const, comphelper::OInterfaceContainerHelper4<com::sun::st"
https://crashreport.libreoffice.org/stats/crash_details/874b8763-3a99-45cc-a529-7303a59d0873
Comment 6 stragu 2024-02-28 04:36:59 UTC
7.6 also crashes:
https://crashreport.libreoffice.org/stats/crash_details/51278e60-4170-4672-b4ba-8cb0ebd47619
with signature:
"comphelper::AccessibleEventNotifier::revokeClientNotifyDisposing(unsigned int, com::sun::star::uno::Reference<com::sun::star::uno::XInterface> const&)"

...known from 156683.
Comment 7 stragu 2024-02-28 06:46:57 UTC
Created attachment 192840 [details]
crash minidump

Still crashes in:

Version: 24.2.2.0.0+ (X86_64) / LibreOffice Community
Build ID: dfbe587e1ef565225ceb4a66c23c76ae0e3a8329
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

In console:

warn:configmgr:418408:418408:configmgr/source/xcuparser.cxx:643: unknown property "SpellAndGrammarDialogImage" in "file:///home/stragu/.config/libreofficedev/4/user/uno_packages/cache/registry/com.sun.star.comp.deployment.configuration.PackageRegistryBackend/lu4174283ywshl.tmp/Linguistic.xcu"
warn:sal.osl:418408:418408:sal/osl/unx/module.cxx:100: dlopen(/opt/libreofficedev24.2/program/libjava_gcc3.so, 257): /opt/libreofficedev24.2/program/libjava_gcc3.so: cannot open shared object file: No such file or directory
warn:sal.osl:418408:418408:sal/osl/unx/module.cxx:100: dlopen(/opt/libreofficedev24.2/program/libgcc3_java.so, 257): /opt/libreofficedev24.2/program/libgcc3_java.so: cannot open shared object file: No such file or directory
warn:toolkit.helper:418408:418408:toolkit/source/helper/unowrapper.cxx:190: UnoWrapper::SetWindowInterface: there is already a WindowPeer/ComponentInterface for this VCL window
warn:desktop:418408:418408:desktop/source/app/crashreport.cxx:61: minidump generated: /home/stragu/.config/libreofficedev/4/crash//e89d29af-6239-46fb-b5608886-d33c33f2.dmp
Comment 8 Michael Weghorn 2024-02-28 11:26:35 UTC
Pending fix:
https://gerrit.libreoffice.org/c/core/+/164090
Comment 9 Commit Notification 2024-02-28 12:43:01 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c64ae31a7e7b6dc369b820d087527a1db29e2c7

tdf#159735 a11y: Dispose win accessible with VCLXWindow

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Jean-Baptiste Faure 2024-02-28 17:42:15 UTC
Thank you Michael for the fix. Is it possible to backport it to 24.2 and 7.6 ?

Best regards. JBF
Comment 11 Michael Weghorn 2024-02-28 19:58:33 UTC
(In reply to Jean-Baptiste Faure from comment #10)
> Thank you Michael for the fix. Is it possible to backport it to 24.2 and 7.6
> ?

Backports for 24.2 and 7.6 are pending in Gerrit:

https://gerrit.libreoffice.org/c/core/+/163988
https://gerrit.libreoffice.org/c/core/+/164113
Comment 12 Commit Notification 2024-02-29 10:14:07 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/97a2f97bf994b9804fa509e06e352ce99b02007b

tdf#159735 a11y: Dispose win accessible with VCLXWindow

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-02-29 10:14:10 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/1c64b4ebd16ee301bcfaa12c659e7baad7b8e519

tdf#159735 a11y: Dispose win accessible with VCLXWindow

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.